Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* comply with PMS corner cases for package names; gentoo bug 263787

* serialization support for cpv derivatives.  Not great, but packages.g.o
  relies on it, thus it's inclusion.

* not surprising on the timing (or spotting it via ciaran spreading it
  via blog comments), gentoo bug 226505 revisited- change in phase ordering
  afflicting all eapis.  pkgcore had it right the first time, inverted the
  ordering in 0.4.7.9.


pkgcore 0.4.7.16: March 24, 2009

* pmerge is a bit more informative when there is nothing to merge,
  and doesn't ask if in --ask if the users wishes to proceed.
  Thanks to DJ Anderson for pointing out this oversight.

* ensure unicode for pquery --attr longdescription w/in pquery; via this
  it leaves the unicode question to the formatter, instead of down converting
  earlier.

* fix a mismatch between src ebuilds and binpkgs for _eclasses_ when
  doing pquery --attr inherited.  Bit of a hack, but it'll suffice.

* pquery --attr all and --attr allmetadata was added.  'all' gets you
  all known attrs (environment, contents, etc); bit heavy but useful if
  you need to see it all.  'allmetadata' gets you the key/val pairs for
  this host- fetchables, depends, slotting, eapi, repo, cbuild/chost, etc,
  but no environment/contents.

* fix cycle detection for dev-util/git; specifically there is a cycle on
  virtual/perl-Module-Built which can be ignored since that chain of deps
  are pulled in via post_rdepends.

* make gid/mode configurable for filelist pkgsets; this fixes 4 failures
  for when the tests are ran and the user isn't a member of portage.

* fix a cornercase in fs.livefs.intersect where intersecting a file/dir
  would trigger a traceback.

* fix a corner case where the world file isn't updated if the world file
  is empty.

* fix a deprecation warning under 2.6 caused by an impedence between