@@ -11,7 +11,7 @@ class base(Exception):
 class MissingChksum(base):
 
     def __init__(self, filename):
-        base.__init__(self, "Missing chksum file %r" % filename)
+        base.__init__(self, "Missing chksum data for %r" % filename)
         self.file = filename
 
 
